--- a/Resunet.csproj
+++ b/Resunet.csproj
@@ -12,5 +12,6 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.1" />
     <PackageReference Include="Npgsql" Version="7.0.1" />
     <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.5" />
   </ItemGroup>
 </Project>
