--- a/Resunet.csproj
+++ b/Resunet.csproj
@@ -14,4 +14,7 @@
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.5" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
 </Project>
