--- a/Resunet/Resunet.csproj
+++ b/Resunet/Resunet.csproj
@@ -12,6 +12,9 @@
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.3" />
 		<PackageReference Include="Npgsql" Version="7.0.2" />
 		<PackageReference Include="Dapper" Version="2.0.123" />
-		<PackageReference Include="SixLabors.ImageSharp" Version="3.0.0" />
+		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.6" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="wwwroot\images\" />
 	</ItemGroup>
 </Project>
