#R-1 [feature] Refactoring + article editor

--- a/Resunet/appsettings.json
+++ b/Resunet/appsettings.json
@@ -7,6 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "Default": "User ID=postgres;Password=password;Host=localhost;Port=5432;Database=dev"
+        "Default": "User ID=postgres;Password=password;Host=localhost;Port=5432;Database=postgres"
     }
 }
