--- a/Resunet/Resunet.csproj
+++ b/Resunet/Resunet.csproj
@@ -18,7 +18,7 @@
 		</ProjectReference>
 	</ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="..\ResunetBl\ResunetBl.csproj">
+		<ProjectReference Include="..\ResunetBl\ResunetBL.csproj">
 			<GlobalPropertiesToRemove></GlobalPropertiesToRemove>
 		</ProjectReference>
 	</ItemGroup>
