--- a/Resunet/Resunet.csproj
+++ b/Resunet/Resunet.csproj
@@ -11,7 +11,7 @@
 	<PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
 	<ItemGroup>
 		<PackageReference Include="SixLabors.ImageSharp" Version="3.0.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.0" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\ResunetUI\ResunetUI.csproj">
@@ -22,6 +22,9 @@
 		<ProjectReference Include="..\ResunetBl\ResunetBL.csproj">
 			<GlobalPropertiesToRemove></GlobalPropertiesToRemove>
 		</ProjectReference>
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="wwwroot\postimages\" />
 	</ItemGroup>
 
 </Project>
